# LiMa

./: .gitignore  Cargo.toml  README.md
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/queries/: assets.rs  mod.rs  projects.rs  projects_create.rs  projects_delete.rs  projects_detail.rs  projects_import.rs  projects_search.rs  projects_update.rs  tags.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/models/: bundle.rs  mod.rs  project.rs
crates/domain/src/pagination/: mod.rs
crates/indexer/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs  state.rs
crates/server/src/models/: http_error.rs
crates/server/src/routes/: bundle_create.rs  bundle_delete.rs  health.rs  mod.rs  project.rs  project_assets.rs  project_create.rs  project_delete.rs  project_detail.rs  project_import.rs  project_update.rs
crates/server/src/routes/assets/: delete.rs
crates/server/src/routes/tags/: create.rs  list.rs
docs/: API.md  BRIEF.md  DEV.md  FRONTEND.md
migrations/: 20260112204637_init_schema.sql  20260113164231_cursor_index.sql  20260113184334_fix_projects_fts.sql
scripts/: api_create_bundle.sh  api_create_project.sh  api_delete_bundle.sh  api_delete_project.sh  api_update_project.sh  clean_all_state.sh  db_dummy.sh
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: create-project-dialog.tsx  file-dropzone.tsx  import-assets-dialog.tsx  media-card.tsx  media-image.tsx  theme-toggle.tsx
ui/src/lib/: api.ts  format.ts  media.ts
ui/src/pages/: project-detail.tsx  projects.tsx
