[package]
name = "lima-db"
version = "0.1.0"
edition = "2024"

[dependencies]
lima-domain = { version = "0.1.0", path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4"] }
