[package]
name = "lima-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
lima-db = { version = "0.1.0", path = "../db" }
lima-domain = { version = "0.1.0", path = "../domain" }
lima-indexer = { version = "0.1.0", path = "../indexer" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
